crates/ty_server/tests/e2e/snapshots/e2e__code_actions__code_action_possible_missing_submodule_attribute.snap
---
source: crates/ty_server/tests/e2e/code_actions.rs
expression: code_actions
---
[
  {
    "title": "Ignore 'possibly-missing-submodule' for this line",
    "kind": "quickfix",
    "diagnostics": [
      {
        "range": {
          "start": {
            "line": 1,
            "character": 0
          },
          "end": {
            "line": 1,
            "character": 11
          }
        },
        "severity": 2,
        "code": "possibly-missing-submodule",
        "codeDescription": {
          "href": "https://ty.dev/rules#possibly-missing-submodule"
        },
        "source": "ty",
        "message": "Submodule `parser` might not have been imported/ninfo: Consider explicitly importing `html.parser`/ninfo: rule `possibly-missing-submodule` is enabled by default"
      }
    ],
    "edit": {
      "changes": {
        "file://<temp_dir>/src/foo.py": [
          {
            "range": {
              "start": {
                "line": 1,
                "character": 11
              },
              "end": {
                "line": 1,
                "character": 11
              }
            },
            "newText": "  # ty:ignore[possibly-missing-submodule]"
          }
        ]
      }
    },
    "isPreferred": false
  }
]
